--- a/index.html
+++ b/index.html
@@ -25,13 +25,20 @@
             <h6>Let's Chat - Online</h6>
         </div>
         <div class="text-center p-2">
-            <span>Please fill out the form to start chat!</span> 
+            <span class="lblWelcome">Please fill out the form to start chat!</span>
+            <iframe id="frmLogs" class="d-none" title="Historial chat" width="100%" height="350" src=""></iframe>
         </div>
         <div class="chat-form">
-            <input type="text" class="form-control" placeholder="Name">
-            <input type="text" class="form-control" placeholder="Email">
-            <textarea class="form-control" placeholder="Your Text Message"></textarea>
-            <button class="btn btn-success btn-block">Submit</button>
+            <div id="divRegistro">
+                <input type="text" class="form-control" placeholder="Name" id="inputName">
+                <input type="text" class="form-control" placeholder="Email" id="inputMail">
+                <textarea class="form-control" placeholder="Your Text Message" id="inputInitialMessage"></textarea>
+                <button class="btn btn-success btn-block" id="btnStart">Submit</button>
+            </div>
+            <div id="divConversasion" class="d-none">
+                <textarea class="form-control" placeholder="Your Message" id="inputNewMessage"></textarea>
+                <button class="btn btn-success btn-block" id="btnSendmessage">Send</button>
+            </div>
         </div>
     </div>
 
@@ -39,6 +46,21 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- Jquery -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>    
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+    <script type="text/javascript">
+    $(document).ready(function(){
+        $("#btnStart").on("click", function(){
+            $(".lblWelcome").addClass("d-none");
+            $("#divRegistro").addClass("d-none");
+            $("#divConversasion").removeClass("d-none");
+            $("#frmLogs").removeClass("d-none");
+        });
+
+        $("#btnSendmessage").on("click", function(){
+            
+        });
+    });
+    </script>
 </body>
 </html>
