Actualizacion, se inicia proceso de envio recepcion de mensajes de lado cliente

--- a/Admin/index.html
+++ b/Admin/index.html
@@ -53,6 +53,19 @@
                 </div>
             </div>
             <div class="col-8">
+                <iframe id="frmLogs" class="" title="Historial chat" width="100%" height="350" src=""></iframe>
+
+                <form class="row g-3">
+                    <div class="col-10">
+                        <label for="txtMessage" class="form-label">Message</label>
+                        <textarea class="form-control" id="txtMessage" rows="3"></textarea>
+                    </div>
+                    <div class="col-2 pt-5">
+                        <div class="d-grid gap-2">
+                            <button class="btn btn-primary" type="button" id="btnSend">Send</button>
+                        </div>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
