Actualizacion, seleccionar chat, marcar chat seleccionado, cargar chat seleccionado

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="text-center p-2">
             <span class="lblWelcome">Please fill out the form to start chat!</span>
             <!-- <iframe id="frmLogs" class="d-none" title="Historial chat" width="100%" height="350" src=""></iframe> -->
-            <div id="chatLog" class="d-none" width="100%"></div>
+            <div id="chatLog" class="d-none"></div>
         </div>
         <div class="chat-form">
             <div id="divRegistro">
