Actualizacion, correccion de errror en load de log, y en zona horaria

--- a/Admin/index.html
+++ b/Admin/index.html
@@ -38,10 +38,10 @@
                 <a href="javascript:void(0);" class="list-group-item list-group-item-action d-none itemClone itemChatList">
                     <div class="d-flex w-100 justify-content-between">
                         <h5 class="mb-1 cliName">Name</h5>
-                        <small class="txtm cliDate">3 days ago</small>
+                        <small class="txtm cliDate text-muted">3 days ago</small>
                     </div>
                     <p class="mb-1 cliMessage">Message.</p>
-                    <small class="txtm cliMail">Mail.</small>
+                    <small class="txtm cliMail text-muted">Mail.</small>
                 </a>
             </div>
             <div class="col-8 d-none" id="chatDetails">
