--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
         </div>
         <div class="text-center p-2">
             <span class="lblWelcome">Please fill out the form to start chat!</span>
-            <!-- <iframe id="frmLogs" class="d-none" title="Historial chat" width="100%" height="350" src=""></iframe> -->
             <div id="chatLog" class="d-none"></div>
         </div>
         <div class="chat-form">
@@ -66,12 +65,16 @@
     });
 
     function sendMessage(strMessage, round){
+        let dt = new Date(),
+            time = dt.getHours() + ":" + dt.getMinutes();
+
         let objData = {
             message: strMessage,
             email: $("#inputMail").val(),
             name: $("#inputName").val(),
             round: round,
-            _method: "POST"
+            _method: "POST",
+            _time: time
         };
 
         $.post("core/request.php", objData);
@@ -96,7 +99,6 @@
         oldscrollHeight = $("#chatLog")[0].scrollHeight - 20;
 
         $.post("core/request.php", objData, function(result) {
-            // $("#frmLogs").attr("src", `data:text/html;charset=utf-8,${escape(result)}`);
             $("#chatLog").html(result);
 
             let newscrollHeight = $("#chatLog")[0].scrollHeight - 20;
