--- a/Admin/index.html
+++ b/Admin/index.html
@@ -27,7 +27,7 @@
     <div class="container">
         <nav class="navbar navbar-light bg-light mb-5">
             <div class="container-fluid">
-                <span class="navbar-brand mb-0 h1">Welcome to chat support!</span>
+                <span class="navbar-brand mb-0 h1 pageTitle">Welcome to chat support!</span>
             </div>
         </nav>
 
@@ -47,16 +47,17 @@
             <div class="col-8 d-none" id="chatDetails">
 
                 <div class="btn-group ms-2 mb-2" role="group">
-                    <button type="button" class="btn btn-outline-secondary" id="btnFinalizar"><i class="fa fa-power-off"></i> Finish chatting</button>
-                    <button type="button" class="btn btn-outline-secondary" id="btnMovechat" disabled="disabled"><i class="fa fa-bookmark-o"></i> Move to file</button>
-                    <button type="button" class="btn btn-outline-secondary" id="btnFinalizechat"><i class="fa fa-envelope-open-o"></i> Finish and Send by email</button>
+                    <button type="button" class="btn btn-outline-secondary" id="btnFinalizar"><i class="fa fa-power-off"></i> <text class="btnFinish">Finish chatting</text></button>
+                    <button type="button" class="btn btn-outline-secondary" id="btnMovechat" disabled="disabled"><i class="fa fa-bookmark-o"></i> <text class="btnMovetoFile">Move to file</text></button>
+                    <button type="button" class="btn btn-outline-secondary" id="btnFinalizechat"><i class="fa fa-envelope-open-o"></i> <text class="btnSenToMail">Finish and Send by email</text></button>
+                    <button type="button" class="btn btn-outline-secondary">Español</button>
                 </div>                
 
                 <div id="chatLog" class=""></div>
 
                 <form class="row g-3">
                     <div class="col-10">
-                        <label for="txtMessage" class="form-label">New message</label>
+                        <label for="txtMessage" class="form-label labelMesage">New message</label>
                         <textarea class="form-control" id="txtMessage" rows="3"></textarea>
                     </div>
                     <div class="col-2 pt-5">
